--- a/SOPManagement/Views/Home/LogIn.cshtml
+++ b/SOPManagement/Views/Home/LogIn.cshtml
@@ -17,8 +17,7 @@
             <h2>
                 <font color="red">
 
-                    Your session was timed out due to your inactivity for @Session.Timeout minutes.
-                    Please close the broweser and browse application again to start a new session.
+                    Your session was timed out. Please close the broweser and browse application again to start a new session.
                 </font>
             </h2>
 
